<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UltraPhotoSelector</string>
    <string name="more_than_max">Exceeds the upper limit</string>
    <string name="preview">Preview</string>
    <string name="recent_photos">Recent photos</string>
    <string name="sure">Sure</string>
    <string name="select_photos">Select photos</string>
    <string name="back">Back</string>
    <string name="taking_pictures">Taking Pictures</string>
    <string name="max_img_limit_reached">Cannot select more than %d images</string>

</resources>